--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "turndown": "^7.1.1"
   },
   "devDependencies": {
     "jest": "27.1.0",
